--- a/k8/win-base-pipeline/pipeline-rbac.yaml
+++ b/k8/win-base-pipeline/pipeline-rbac.yaml
@@ -1,3 +1,43 @@
+
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: modify-data-object
+rules:
+  - verbs:
+      - get
+      - create
+      - delete
+    apiGroups:
+      - cdi.kubevirt.io
+      - kubevirt.io
+    resources:
+      - datavolumes
+      - datasources
+      - virtualmachines
+  - verbs:
+      - create
+    apiGroups:
+      - ''
+    resources:
+      - pods
+  - verbs:
+      - watch
+      - get
+      - list
+    apiGroups:
+      - kubevirt.io
+    resources:
+      - virtualmachineinstances
+  - verbs:
+      - get
+      - delete
+    apiGroups:
+      - ''
+    resources:
+      - persistentvolumeclaims
+---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
