--- a/rhdh/new-project-template.yaml
+++ b/rhdh/new-project-template.yaml
@@ -14,6 +14,7 @@ spec:
     - title: Fill in some steps
       required:
         - name
+        - owner
       properties:
         name:
           title: Name
