--- a/rhdh/windows-vm/new-project-template.yaml
+++ b/rhdh/windows-vm/new-project-template.yaml
@@ -68,7 +68,7 @@ spec:
       name: Publish
       action: publish:gitlab
       input:
-        repoUrl: "${{ parameters.repo.host }}?owner=${{ parameters.repo.owner }}&repo=${{parameters.component_id}}"
+        repoUrl: "${{ parameters.repo.host }}?owner=${{ parameters.repo.owner }}&repo=${{parameters.name}}"
         repoVisibility: public
 
     - id: register
