--- a/rhdh/system/new-project-template.yaml
+++ b/rhdh/system/new-project-template.yaml
@@ -7,9 +7,6 @@ metadata:
   description: Create a project to host workloads
 spec:
   owner: backstage/techdocs-core
-  type: service
-
-  # these are the steps which are rendered in the frontend with the form input
   parameters:
     - title: Fill in some steps
       required:
@@ -34,15 +31,24 @@ spec:
                 - User
     - title: Choose a location
       required:
-        - repoUrl
+        - repo
       properties:
-        repoUrl:
+        repo:
           title: Repository Location
-          type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
+          type: object
+          properties:
+            host:
+              title: Repo Host
+              type: string
+              description: Your SCM host
+            owner:
+              title: Repo Owner
+              type: string
+              description: Your SCM host organization/group
+              default: development
+              enum:
+                - development
+
 
   # here's the steps that are executed in series in the scaffolder backend
   steps:
@@ -57,11 +63,10 @@ spec:
 
     - id: publish
       name: Publish
-      action: publish:github
+      action: publish:gitlab
       input:
-        allowedHosts: ['github.com']
-        description: This is ${{ parameters.name }}
-        repoUrl: ${{ parameters.repoUrl }}
+        repoUrl: "${{ parameters.repo.host }}?owner=${{ parameters.repo.owner }}&repo=${{parameters.name}}"
+        repoVisibility: public
 
     - id: register
       name: Register
@@ -69,3 +74,13 @@ spec:
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
         catalogInfoPath: '/catalog-info.yaml'
+    
+    - id: create-argocd-resources
+      name: Create ArgoCD Resources
+      action: argocd:create-resources
+      input:
+        appName: ${{ parameters.name }}-bootstrap
+        argoInstance: main
+        namespace: janus-argocd
+        repoUrl: https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{ parameters.name }}.git
+        path: 'argocd/'
