--- a/rhdh/system/new-project-template.yaml
+++ b/rhdh/system/new-project-template.yaml
@@ -2,8 +2,8 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 # some metadata about the template itself
 metadata:
-  name: workload-project
-  title: Workload Project
+  name: project
+  title: Project
   description: Create a project to host workloads
 spec:
   owner: backstage/techdocs-core
