--- a/rhdh/system/new-project-template.yaml
+++ b/rhdh/system/new-project-template.yaml
@@ -61,7 +61,9 @@ spec:
         url: ./template
         values:
           name: ${{ parameters.name }}
-          owner: ${{ parameters.owner }}
+          owner: ${{ user.entity.metadata.name }}
+          host: ${{ parameters.repo.host }}
+          destination: ${{ parameters.repo.owner }}/${{ parameters.component_id }}
 
     - id: publish
       name: Publish
