--- a/rhdh/system/template/catalog-info.yaml
+++ b/rhdh/system/template/catalog-info.yaml
@@ -4,9 +4,9 @@ metadata:
   name: ${{ values.name }}
   description: ${{ values.name }}
   annotations:
-    argocd/app-selector: rht-gitops.com/janus-argocd=${{values.component_id}}-bootstrap
-    backstage.io/kubernetes-id: ${{values.component_id}}
-    janus-idp.io/tekton: ${{values.component_id}}
+    argocd/app-selector: rht-gitops.com/janus-argocd=${{values.name}}
+    backstage.io/kubernetes-id: ${{values.name}}
+    janus-idp.io/tekton: ${{values.name}}
     backstage.io/source-location: url:https://${{values.host}}/${{values.destination}}
     backstage.io/techdocs-ref: url:https://${{values.host}}/${{values.destination}}
     gitlab.com/project-slug: ${{values.destination}}
