--- a/rhdh/system/template/catalog-info.yaml
+++ b/rhdh/system/template/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{ values.name }}
   description: ${{ values.name }}
   annotations:
-    argocd/app-selector: rht-gitops.com/janus-argocd=${{values.name}}
+    argocd/app-selector: rht-gitops.com/janus-argocd=${{values.name}}-bootstrap
     backstage.io/kubernetes-id: ${{values.name}}
     janus-idp.io/tekton: ${{values.name}}
     backstage.io/source-location: url:https://${{values.host}}/${{values.destination}}
