--- a/rhdh/system/template/argocd-app-of-apps/templates/application.yaml
+++ b/rhdh/system/template/argocd-app-of-apps/templates/application.yaml
@@ -2,19 +2,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ${{ values.component_id }}-dev
+  name: ${{ values.name }}-dev
   namespace: janus-argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: janus
   source:
-    repoURL: ${{ values.destination }}
+    repoURL: ${{ values.repo_destination }}
     targetRevision: HEAD
     path: ./argocd
   destination:
     server: https://kubernetes.default.svc
-    namespace: ${{ values.component_id }}-dev
+    namespace: ${{ values.name }}-dev
   ignoreDifferences:
     - group: '*'
       jqPathExpressions:
