--- a/rhdh/system/template/catalog-info.yaml
+++ b/rhdh/system/template/catalog-info.yaml
@@ -10,6 +10,7 @@ metadata:
     backstage.io/source-location: url:https://${{values.host}}/${{values.destination}}
     backstage.io/techdocs-ref: url:https://${{values.host}}/${{values.destination}}
     gitlab.com/project-slug: ${{values.destination}}
+    gitlab.com/instance: ${{values.host}}
 
 spec:
   owner: ${{ values.owner }}
