add fetch base annotations for use for gitlab url

--- a/rhdh/windows-vm/new-vm-template.yaml
+++ b/rhdh/windows-vm/new-vm-template.yaml
@@ -53,7 +53,7 @@ spec:
       input:
         url: ./template
         values:
-          name: ${{ steps.systemFetch.output.entity.metadata.name }}
+          name: ${{ parameters.name }}
           
     - id: debug1
       name: annotations
