add create namespace

--- a/rhdh/system/template/argocd-app-of-apps/templates/application.yaml
+++ b/rhdh/system/template/argocd-app-of-apps/templates/application.yaml
@@ -27,6 +27,7 @@ spec:
     syncOptions:
     - RespectIgnoreDifferences=true
     - ApplyOutOfSyncOnly=true
+    - CreateNamespace=true
     retry:
       backoff:
         duration: 5s # the amount to back off. Default unit is seconds, but could also be a duration (e.g. "2m", "1h")
