--- a/rhdh/windows-vm/template/argocd/templates/${{values.name}}-vm.yaml
+++ b/rhdh/windows-vm/template/argocd/templates/${{values.name}}-vm.yaml
@@ -104,8 +104,7 @@ spec:
               name: tablet
               type: tablet
           interfaces:
-            - macAddress: '02:b7:54:00:00:01'
-              masquerade: {}
+            - masquerade: {}
               model: virtio
               name: default
           tpm: {}
