--- a/rhdh/windows-vm/template/argocd/templates/${{values.name}}-vm.yaml
+++ b/rhdh/windows-vm/template/argocd/templates/${{values.name}}-vm.yaml
@@ -150,4 +150,4 @@ spec:
         - name: sysprep
           sysprep:
             configMap:
-              name: sysprep-iis
+              name: ${{values.name}}-sysprep
