--- a/rhdh/windows-vm/new-vm-template.yaml
+++ b/rhdh/windows-vm/new-vm-template.yaml
@@ -55,9 +55,9 @@ spec:
         values:
           name: ${{ parameters.name }}
           owner: ${{ user.entity.metadata.name }}
-          host: ${{ parameters.repo.host }}
-          destination: ${{ parameters.repo.owner }}/${{ parameters.name }}
-          repo_destination: https://${{ parameters.repo.host }}/${{ parameters.repo.owner }}/${{parameters.name}}.git
+          host: ${{ steps.systemFetch.output.entity.metadata.annotations['gitlab.com/instance'] }}
+          destination: development/${{ steps.systemFetch.output.entity.metadata.name }}
+          repo_destination: https://${{ steps.systemFetch.output.entity.metadata.annotations['gitlab.com/instance'] }}/development/${{ steps.systemFetch.output.entity.metadata.name }}.git
           namespace: ${{steps.systemFetch.output.entity.metadata.name}}-dev
           
     - id: debug1
