Update Service, Route, and Sysprep PowerShell

--- a/k8/deployments/iisvm/route.yaml
+++ b/k8/deployments/iisvm/route.yaml
@@ -9,7 +9,7 @@ spec:
     name: iis-vm
     weight: 100
   port:
-    targetPort: http
+    targetPort: identity
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect
