--- a/k8/deployments/iisvm/service.yaml
+++ b/k8/deployments/iisvm/service.yaml
@@ -5,10 +5,14 @@ metadata:
   namespace: demo-vm-ossm
 spec:
   ports:
-    - name: http
+    - name: api
       protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8080
+      targetPort: 8080
+    - name: identity
+      protocol: TCP
+      port: 8081
+      targetPort: 8081
   internalTrafficPolicy: Cluster
   type: ClusterIP
   selector:
