--- a/ansible/tasks/push_templates.yaml
+++ b/ansible/tasks/push_templates.yaml
@@ -5,4 +5,4 @@
   ansible.builtin.shell: git remote add gitlab "https://root:{{ root_password }}@{{ gitlab_host }}/development/windows-templates"
   ignore_errors: True
 - name: Push templates
-  ansible.builtin.shell: git push gitlab add-rhdh-templates
+  ansible.builtin.shell: git push gitlab $(git branch --show-current)
