--- a/rhdh/frontend/template/argocd/templates/${{values.name}}-deployment.yaml
+++ b/rhdh/frontend/template/argocd/templates/${{values.name}}-deployment.yaml
@@ -32,9 +32,7 @@ spec:
     spec:
       containers:
       - env:
-        - name: SERVICE_LOCAL
-          value: ${{values.name}}-front-end
-        - name: SERVICE_REMOTE
+        - name: BACKEND_SERVICE_HOST
           value: ${{values.backendServiceName}}
         image: ${{values.image}}
         imagePullPolicy: Always
@@ -46,6 +44,9 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "1"
+        ports:
+        - containerPort: 8080
+          protocol: TCP
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
