--- a/rhdh/frontend/template/argocd/templates/${{values.name}}-puller.yaml
+++ b/rhdh/frontend/template/argocd/templates/${{values.name}}-puller.yaml
@@ -6,7 +6,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: default
-    namespace: test-dev
+    namespace: ${{values.namespace}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
